see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note


13-Apr-2010 Ron Severdia
# Fixed many UI issues introduced by JForm and other updates
$ Corrected and synchronized language terms

13-Arp-2010 Mark Dexter
# Fixed category edit so that change parent category works again
# Fixed category manager so that Empty Trash toolbar button shows
# Refactored JTableNested move method to eliminate duplicate code

13-Apr-2010 Jean-Marie Simonet
# Fixed some Archive, Trash, Empty trash bugs + Strings.
$ Updated xx-XX test language to current en-GB strings.

13-Apr-2010 Christophe Demko
# Re-enabling sorting in plugins and modules view (bug in commit #15980)
+ Enabling the ability to sort an array of objects using multiple keys
# Consolidating the consistency of menu items

12-Apr-2010 Jean-Marie Simonet
$ Standardized some obsolete KEYS
$ Consolidated/Standardized/created some keys/inis
+$ Adding missing .sys.ini file
# Fixing Articles Categories module. +$ Adding its language files + Adding it in sql

11-Apr-2010 Hannes Papenberg
# Fixing admin template parameters - Thanks Jonnathan S. Lima
# Moved stick() function from BannersModelBanners to BannersModelBanner
# Removed obsolete functions from BannersModelBanners
# Improved routing code of ContentHelperRoute

11-Apr-2010 Jean-Marie Simonet
# Fixed a typo in en-GB.ini in backend.
#$ Refactoring ini/keys in libraries J/database
$ Correcting —again— non standards keys
# Fixing bug in controlleradmin.php
$ Corrected —again- keys changed by #15980
$ Corrected com_banners clients keys
$ Corrected more ini strings

10-Apr-2010 Hannes Papenberg
^ Created JCategories to handle all presentation-logic for categories