@@ -123,9 +123,9 @@ INSERT IGNORE INTO `#__banner_clients` VALUES
 INSERT IGNORE INTO `#__categories` VALUES
 (11, 28, 29, 36, 37, 2, 'sample-data-content/news', 'com_content', 'News', 'news', '', 'The top articles category.', 1, 0, '0000-00-00 00:00:00', 1, '{"target":"","image":"-1"}', '', '', '{"page_title":"","author":"","robots":""}', 0, '2010-01-24 11:25:26', 0, '0000-00-00 00:00:00', 0, ''),
 (12, 29, 29, 28, 35, 2, 'sample-data-content/countries', 'com_content', 'Countries', 'countries', '', 'The latest news from the Joomla! Team', 1, 0, '0000-00-00 00:00:00', 1, '{"target":"","image":"-1"}', '', '', '{"page_title":"","author":"","robots":""}', 0, '2010-01-24 11:25:26', 0, '0000-00-00 00:00:00', 0, ''),
-(20, 35, 1, 1, 8, 1, 'sample-data-weblinks', 'com_weblinks', 'Sample Data Weblinks', 'sample-data-weblinks', '', '<p>The sample weblinks category.</p>', 1, 0, '0000-00-00 00:00:00', 1, '{}', '', '', '', 0, '2010-03-26 10:22:23', 0, '0000-00-00 00:00:00', 0, 'en_GB'),
-(21, 36, 20, 2, 5, 2, 'sample-data-weblinks/joomla-specific-links', 'com_weblinks', 'Joomla! Specific Links', 'joomla-specific-links', '', '<p>A selection of links that are all related to the Joomla! Project.</p>', 1, 0, '0000-00-00 00:00:00', 1, '{}', '', '', '', 0, '2010-03-26 10:22:23', 0, '0000-00-00 00:00:00', 0, 'en_GB'),
-(22, 37, 21, 3, 4, 3, 'sample-data-weblinks/joomla-specific-links/other-resources', 'com_weblinks', 'Other Resources', 'other-resources', '', '', 1, 0, '0000-00-00 00:00:00', 1, '{}', '', '', '', 0, '2010-01-24 11:23:53', 0, '0000-00-00 00:00:00', 0, 'en_GB'),
+(20, 35, 1, 1, 8, 1, 'sample-data-weblinks', 'com_weblinks', 'Sample Data Weblinks', 'sample-data-weblinks', '', '<p>The sample weblinks category.</p>', 1, 0, '0000-00-00 00:00:00', 1, '{}', '', '', '', 0, '2010-03-26 10:22:23', 0, '0000-00-00 00:00:00', 0, 'en-GB'),
+(21, 36, 20, 2, 5, 2, 'sample-data-weblinks/joomla-specific-links', 'com_weblinks', 'Joomla! Specific Links', 'joomla-specific-links', '', '<p>A selection of links that are all related to the Joomla! Project.</p>', 1, 0, '0000-00-00 00:00:00', 1, '{}', '', '', '', 0, '2010-03-26 10:22:23', 0, '0000-00-00 00:00:00', 0, 'en-GB'),
+(22, 37, 21, 3, 4, 3, 'sample-data-weblinks/joomla-specific-links/other-resources', 'com_weblinks', 'Other Resources', 'other-resources', '', '', 1, 0, '0000-00-00 00:00:00', 1, '{}', '', '', '', 0, '2010-01-24 11:23:53', 0, '0000-00-00 00:00:00', 0, 'en-GB'),
 (23, 30, 12, 29, 34, 3, 'sample-data-content/countries/australia', 'com_content', 'Australia', 'australia', '', '', 1, 0, '0000-00-00 00:00:00', 1, '', '', '', '', 0, '2010-01-24 11:23:57', 0, '0000-00-00 00:00:00', 0, ''),
 (24, 31, 23, 30, 31, 4, 'sample-data-content/countries/australia/queensland', 'com_content', 'Queensland', 'queensland', '', '', 1, 0, '0000-00-00 00:00:00', 1, '', '', '', '', 0, '2010-01-24 11:23:57', 0, '0000-00-00 00:00:00', 0, ''),
 (25, 32, 23, 32, 33, 4, 'sample-data-content/countries/australia/tasmania', 'com_content', 'Tasmania', 'tasmania', '', '', 1, 0, '0000-00-00 00:00:00', 1, '', '', '', '', 0, '2010-01-24 11:23:57', 0, '0000-00-00 00:00:00', 0, ''),
@@ -866,10 +866,10 @@ INSERT  INTO `#__modules_menu` VALUES
 --
 INSERT IGNORE INTO `#__newsfeeds`  (`catid`,`id`,`name`,`alias`,`link`,`filename`,`published`,`numarticles`,`cache_time`,`checked_out`,`checked_out_time`,`ordering`,`rtl`,`access`,`language`,`params`)
 VALUES
-(28, 1, 'Joomla! Announcements', 'joomla-announcements', 'http://www.joomla.org/announcements.feed?type=rss', NULL, 1, 5, 3600, 0, '0000-00-00 00:00:00', 1,0,1,'en_GB','{"show_headings":"","show_name":"","show_articles":"","show_link":"","show_cat_description":"","show_cat_items":"","show_feed_image":"","show_feed_description":"","show_item_description":"","feed_word_count":"0"}'),
-(28, 2, 'New Joomla! Extensions', 'new-joomla-extensions', 'http://feeds.joomla.org/JoomlaExtensions', NULL, 1, 5, 3600, 0, '0000-00-00 00:00:00', 1,0,1,'en_GB','{"show_headings":"","show_name":"","show_articles":"","show_link":"","show_cat_description":"","show_cat_items":"","show_feed_image":"","show_feed_description":"","show_item_description":"","feed_word_count":"0"}'),
-(28, 3, 'Joomla! Security News', 'joomla-security-news', 'http://feeds.joomla.org/JoomlaSecurityNews', NULL, 1, 5, 3600, 0, '0000-00-00 00:00:00', 1,0,1,'en_GB','{"show_headings":"","show_name":"","show_articles":"","show_link":"","show_cat_description":"","show_cat_items":"","show_feed_image":"","show_feed_description":"","show_item_description":"","feed_word_count":"0"}'),
-(28, 4, 'Joomla! Connect', 'joomla-connect', 'http://feeds.joomla.org/JoomlaConnect', NULL, 1, 5, 3600, 0, '0000-00-00 00:00:00', 1,0,1,'en_GB','{"show_headings":"","show_name":"","show_articles":"","show_link":"","show_cat_description":"","show_cat_items":"","show_feed_image":"","show_feed_description":"","show_item_description":"","feed_word_count":"0"}');
+(28, 1, 'Joomla! Announcements', 'joomla-announcements', 'http://www.joomla.org/announcements.feed?type=rss', NULL, 1, 5, 3600, 0, '0000-00-00 00:00:00', 1,0,1,'en-GB','{"show_headings":"","show_name":"","show_articles":"","show_link":"","show_cat_description":"","show_cat_items":"","show_feed_image":"","show_feed_description":"","show_item_description":"","feed_word_count":"0"}'),
+(28, 2, 'New Joomla! Extensions', 'new-joomla-extensions', 'http://feeds.joomla.org/JoomlaExtensions', NULL, 1, 5, 3600, 0, '0000-00-00 00:00:00', 1,0,1,'en-GB','{"show_headings":"","show_name":"","show_articles":"","show_link":"","show_cat_description":"","show_cat_items":"","show_feed_image":"","show_feed_description":"","show_item_description":"","feed_word_count":"0"}'),
+(28, 3, 'Joomla! Security News', 'joomla-security-news', 'http://feeds.joomla.org/JoomlaSecurityNews', NULL, 1, 5, 3600, 0, '0000-00-00 00:00:00', 1,0,1,'en-GB','{"show_headings":"","show_name":"","show_articles":"","show_link":"","show_cat_description":"","show_cat_items":"","show_feed_image":"","show_feed_description":"","show_item_description":"","feed_word_count":"0"}'),
+(28, 4, 'Joomla! Connect', 'joomla-connect', 'http://feeds.joomla.org/JoomlaConnect', NULL, 1, 5, 3600, 0, '0000-00-00 00:00:00', 1,0,1,'en-GB','{"show_headings":"","show_name":"","show_articles":"","show_link":"","show_cat_description":"","show_cat_items":"","show_feed_image":"","show_feed_description":"","show_item_description":"","feed_word_count":"0"}');
 
 --
 -- Dumping data for table `#__social_comments`
